--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
                 aria-label="Search">
             <button 
                 class="btn btn-outline-success" 
-                type="submit"          
-                onclick="searchfunc()"
+                        type="submit"
+                onclick="searchfunc(event)"
             >Search</button>
         </form>
+
+
+
+
         </div>
       </nav>
 
